deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsg-api
spec:
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
